force.com/CALM/src/objects/LG_Returning_Users__c.object
<CustomObject>
    <description>This Object describes the number of Returning Users for the past 60 days.</description>
    <fields>
        <fullName>au__c</fullName>
        <label>Application Key</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d10__c</fullName>
        <label>d10</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>d11__c</fullName>
        <label>d11</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>d12__c</fullName>
        <label>d12</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>LG Returning Users</label>
    <nameField>
        <label>Custom Object Label Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LG Returning Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>